backend/05-postgrest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgrest
  namespace: proliga-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgrest
  template:
    metadata:
      labels:
        app: postgrest
    spec:
      containers:
        - name: postgrest
          image: yourrepo/pgrest:latest
          ports:
            - containerPort: 3000
